Lost-and-Found-Manifests/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: lostfound-deployment
  namespace: lost-and-found
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lost-and-found
  template:
    metadata:
      name: lost-and-found
      labels:
        app: lost-and-found
    spec:
      containers:
      - name: lost-and-found
        image: parthsingh2496/django-jenkins:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 300m
            memory: 256Mi
